--- a/src/main.scss
+++ b/src/main.scss
@@ -10,6 +10,7 @@ $color-primary: #09AE34;
 $color-white: #ffffff;
 $color-white-30: rgba(255, 255, 255, 0.3);
 $color-green: #02C75A;
+$bg-color: #E8F8EB;
 
 body {
   background-color: $color-white;
@@ -19,9 +20,12 @@ body {
 }
 
 .container {
-  max-width: 900px;
-  margin: 0 auto;
-  padding: 40px 0;
+  max-width: 1000px;
+  margin: 60px auto;
+  padding: 40px 40px;
+  border-radius: 15px;
+  border: 3px solid  #E5E6E7;
+  background-color: #F8F9FA;
 }
 
 // HEADER //
@@ -110,8 +114,6 @@ header {
 
 // CREATE TODO //
 
-
-
 .createtodo {
   height: 80px;
   margin-bottom: 30px;
@@ -127,6 +129,7 @@ header {
     align-items: center;
     color: $color-white;
     background-color: $color-green;
+    border: none;
 
     span {
       margin: 0 5px;
@@ -138,12 +141,12 @@ header {
   input {
     flex-grow: 1;
     padding: 0 15px;
-    height: 45px;
+    height: 50px;
     min-width: 500px;
-    border-radius: 2px;
+    border-radius: 7px;
     border: solid 1px $color-green;
     outline: 0;
-    background-color: $color-white-30;
+    background-color: white;
     margin-left: 10px;
 
     &::placeholder {
@@ -151,3 +154,216 @@ header {
     }
   }
 }
+
+// TODO LIST TABS //
+
+$border-color: #E6E6E6;
+$active-color: #4CC570;
+$text-color: #979797;
+$category-item-height: 40px;
+$category-item-width: 100px;
+$category-item-margin: 15px;
+
+.todo-list-tabs {
+  .category {
+    height: 55px;
+    width: auto;
+    display: flex;
+    align-items: center;
+  }
+
+  .category-item {
+    width: $category-item-width;
+    height: $category-item-height;
+    border-bottom: 3px solid $border-color;
+    // background-color: white;
+    margin: 0 $category-item-margin;
+    display: flex;
+    color: $text-color;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+    text-decoration: none;
+    font-weight: bold;
+    font-size: 20px;
+
+    &.active-tab {
+      color: $active-color;
+      border-bottom: 4px solid $active-color;
+    }
+  }
+}
+
+// TODO LIST //
+
+$border-color: #E6E6E6;
+$hover-color: #4CC570;
+$text-color: rgb(180, 178, 178);
+$bg-color: #E8F8EB;
+
+.todo-list {
+  height: auto;
+  padding: 25px;
+  margin-bottom: 30px;
+  position: relative;
+  align-items: center;
+  overflow: hidden;
+  font-family: "Pretendard Variable", "Noto Sans KR", "Apple SD Gothic Neo", "맑은 고딕", "Malgun Gothic", sans-serif;
+  font-size: 20px;
+  border: solid 3px #E5E6E7;
+  margin-top: 5px;
+  border-radius: 15px;
+  background-color: white;
+  
+
+  .todo-list-items {
+    color: black;
+  }
+
+  .deleteAll {
+    width: 100px;
+    height: 40px;
+    border: solid 3px $border-color;
+    border-radius: 10px;
+    background-color: white;
+    margin: 5px 10px;
+    display: flex;
+    flex-direction: row;
+    vertical-align: middle;
+    color: $text-color;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+    text-decoration: none;
+    font-weight: bold;
+    font-size: 15px;
+
+    &:hover {
+      color: $hover-color;
+      background-color: #E8F8EB;
+      border: 3px solid $hover-color;
+    }
+  }
+
+  .eachItem {
+    height: 55px;
+    display: flex;
+    flex-direction: row;
+    margin: 5px 10px;
+    margin-top: 20px;
+    border-radius: 10px;
+    background-color: $bg-color;
+
+    input {
+      margin: auto 10px;
+      align-items: center;
+      cursor: pointer;
+    }
+
+    a {
+      flex-grow: 1;
+      vertical-align: middle;
+      display: flex;
+      color: rgb(83, 82, 82);
+      align-items: center;
+      justify-content: center;
+      cursor: pointer;
+      text-decoration: none;
+      font-weight: bold;
+
+      &:hover {
+        color: $hover-color;
+      }
+    }
+
+    button {
+      border: none;
+      background: none;
+      color: rgb(170, 168, 168);
+
+      &:hover {
+        color: rgb(83, 82, 82);
+      }
+    }
+  }
+}
+
+// MODAL //
+
+$background-overlay: rgba(0, 0, 0, 0.4);
+$modal-bg: rgb(255, 255, 255);
+$border-color: #E6E6E6;
+$hover-color: #009F47;
+
+.modal {
+  justify-content: center;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: $background-overlay;
+
+  .modalBody {
+    position: absolute;
+    top: 50%;
+    width: 400px;
+    height: 300px;
+    padding: 40px;
+    text-align: center;
+    background-color: $modal-bg;
+    border-radius: 10px;
+    box-shadow: 0 2px 3px 0 rgba(34, 36, 38, 0.15);
+    justify-content: center;
+    transform: translateY(-50%);
+    display: flex;
+    flex-direction: column;
+    font-size: 15px;
+
+    p {
+      color: gray;
+    }
+
+    input {
+      width: 300px;
+      height: 30px;
+      font-size: 20px;
+      justify-content: center;
+      padding: 20px;
+      margin: 50px auto 0;
+      outline: none;
+      border: solid 3px $border-color;
+      border-radius: 10px;
+
+      &:focus {
+        color: $hover-color;
+        background-color: #E8F8EB;
+        border: none;
+      }
+    }
+
+    .buttons {
+      display: flex;
+      margin: 30px auto 25px;
+      justify-content: center;
+
+      button {
+        position: left;
+        border: 1px solid rgb(170, 168, 168);
+        background: none;
+        color: rgb(170, 168, 168);
+        margin: 0 10px;
+        width: 70px;
+        border: solid 3px $border-color;
+        border-radius: 5px;
+        font-size: 15px;
+
+        &:hover {
+          color: $hover-color;
+          background-color: #E8F8EB;
+          border: none;
+        }
+      }
+    }
+  }
+}
+
