--- a/src/main.scss
+++ b/src/main.scss
@@ -1,24 +1,37 @@
+// Fonts //
 @font-face {
   font-family: 'InkLipquid';
   src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_one@1.0/InkLipquid.woff') format('woff');
   font-weight: normal;
   font-style: normal;
 }
-/// color ///
+
+// Colors //
 $color-black: #0E111B;
 $color-primary: #09AE34;
 $color-white: #ffffff;
 $color-white-30: rgba(255, 255, 255, 0.3);
 $color-green: #02C75A;
 $bg-color: #E8F8EB;
+$border-color: #E6E6E6;
+$active-color: #4CC570;
+$hover-color: #009F47;
+$text-color: rgb(180, 178, 178);
+$background-overlay: rgba(0, 0, 0, 0.4);
+$modal-bg: rgb(255, 255, 255);
+$primary-color: #212121;
+$secondary-color: #333;
+$background-color: #eeeaea;
 
+// Body //
 body {
   background-color: $color-white;
-  font-family: "Pretendard Variable", "Noto Sans KR", "Apple SD Gothic Neo", "맑은 고딕", "Malgun Gothic", sans-serif;  
+  font-family: "Pretendard Variable", "Noto Sans KR", "Apple SD Gothic Neo", "맑은 고딕", "Malgun Gothic", sans-serif;
   line-height: 1.4;
   color: $color-black;
 }
 
+// Container //
 .container {
   max-width: 1000px;
   margin: 60px auto;
@@ -28,8 +41,7 @@ body {
   background-color: #F8F9FA;
 }
 
-// HEADER //
-
+// Header //
 header {
   padding: 20px 40px;
   background-color: $color-primary;
@@ -40,32 +52,33 @@ header {
   align-items: center;
   gap: 40px;
   font-family: "Pretendard Variable", "Noto Sans KR", "Apple SD Gothic Neo", "맑은 고딕", "Malgun Gothic", sans-serif;
+
   .logo {
     height: 40px;
     display: flex;
     cursor: pointer;
     transition: 0.3s;
-    &:hover {
-      transform: scale(1.02);
-    }
+
     img {
       width: 40px;
       height: 40px;
     }
+
     font-size: 32px;
     font-weight: bold;
     color: $color-white;
     text-decoration: none;
     align-items: center;
     font-family: 'InkLipquid';
+
     span {
       font-size: 22px;
       margin: 0 10px;
       color: $color-white;
       align-items: center;
-      font-family: "Pretendard Variable", "Noto Sans KR", "Apple SD Gothic Neo", "맑은 고딕", "Malgun Gothic", sans-serif;
     }
   }
+
   nav {
     ul {
       display: flex;
@@ -78,6 +91,7 @@ header {
         height: 40px;
         background-color: #e5e5e5;
       }
+
       li {
         a {
           font-size: 18px;
@@ -93,8 +107,7 @@ header {
   }
 }
 
-// HEADLINE //
-
+// Headline //
 .headline {
   display: flex;
   justify-content: center;
@@ -112,8 +125,7 @@ header {
   }
 }
 
-// CREATE TODO //
-
+// Create Todo //
 .createtodo {
   height: 80px;
   margin-bottom: 30px;
@@ -155,15 +167,7 @@ header {
   }
 }
 
-// TODO LIST TABS //
-
-$border-color: #E6E6E6;
-$active-color: #4CC570;
-$text-color: #979797;
-$category-item-height: 40px;
-$category-item-width: 100px;
-$category-item-margin: 15px;
-
+// Todo List Tabs //
 .todo-list-tabs {
   .category {
     height: 55px;
@@ -173,11 +177,11 @@ $category-item-margin: 15px;
   }
 
   .category-item {
-    width: $category-item-width;
-    height: $category-item-height;
+    width: 100px;
+    height: 40px;
     border-bottom: 3px solid $border-color;
-    // background-color: white;
-    margin: 0 $category-item-margin;
+    margin-left: 15px;
+    margin-right: 15px;
     display: flex;
     color: $text-color;
     align-items: center;
@@ -194,13 +198,7 @@ $category-item-margin: 15px;
   }
 }
 
-// TODO LIST //
-
-$border-color: #E6E6E6;
-$hover-color: #4CC570;
-$text-color: rgb(180, 178, 178);
-$bg-color: #E8F8EB;
-
+// Todo List //
 .todo-list {
   height: auto;
   padding: 25px;
@@ -214,7 +212,6 @@ $bg-color: #E8F8EB;
   margin-top: 5px;
   border-radius: 15px;
   background-color: white;
-  
 
   .todo-list-items {
     color: black;
@@ -288,13 +285,7 @@ $bg-color: #E8F8EB;
   }
 }
 
-// MODAL //
-
-$background-overlay: rgba(0, 0, 0, 0.4);
-$modal-bg: rgb(255, 255, 255);
-$border-color: #E6E6E6;
-$hover-color: #009F47;
-
+// Modal //
 .modal {
   justify-content: center;
   top: 0;
@@ -367,3 +358,75 @@ $hover-color: #009F47;
   }
 }
 
+// About Page //
+.content {
+  margin: 70px auto;
+}
+
+.about {
+  font-family: "NanumSquare-EB", "나눔고딕", "Dotum", "돋움", "Helvetica", "Arial", "AppleSDGothicNeo", sans-serif;
+  align-items: center;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  .content-head {
+    h1 {
+      font-size: 40px;
+      padding: 0 0 30px;
+      font-weight: bold;
+      color: $primary-color;
+      text-align: center;
+    }
+
+    p {
+      align-items: center;
+      display: flex;
+      flex-direction: column;
+      font-size: 18px;
+    }
+
+    img {
+      width: 100%;
+      height: 215px;
+      margin: 30px auto 20px;
+    }
+  }
+
+  .content-middle, .content-end {
+    display: flex;
+    margin: 20px auto;
+
+    h2 {
+      color: $secondary-color;
+      font-size: 20px;
+      font-weight: bold;
+      padding-left: 20px;
+      width: 230px;
+    }
+
+    p {
+      font-size: 12px;
+      line-height: 1.5;
+      color: $text-color;
+      font-weight: normal;
+    }
+  }
+
+  .content-end {
+    margin-top: 60px;
+
+    .grid-container {
+      display: grid;
+      grid-template-columns: 130px 500px;
+      border-top: 1px solid $background-color;
+
+      .grid-item {
+        font-size: 12px;
+        padding: 12px 0;
+        border-bottom: 1px solid $background-color;
+      }
+    }
+  }
+}
